<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>

    <artifactId>notifications-lib</artifactId>

    <version>1.0.0</version>

    <name>Notifications Library</name>

    <description>
        Framework agnostic notification library
    </description>

    <packaging>jar</packaging>

    <properties>

        <project.build.sourceEncoding>
            UTF-8
        </project.build.sourceEncoding>

        <maven.compiler.release>
            21
        </maven.compiler.release>

        <junit.version>
            5.10.2
        </junit.version>

        <mockito.version>
            5.12.0
        </mockito.version>

        <slf4j.version>
            2.0.13
        </slf4j.version>

    </properties>

    <dependencies>

        <!-- Logging -->

        <dependency>

            <groupId>org.slf4j</groupId>

            <artifactId>slf4j-api</artifactId>

            <version>${slf4j.version}</version>

        </dependency>

        <dependency>

            <groupId>org.slf4j</groupId>

            <artifactId>slf4j-simple</artifactId>

            <version>${slf4j.version}</version>

        </dependency>

        <!-- Testing -->

        <dependency>

            <groupId>org.junit.jupiter</groupId>

            <artifactId>junit-jupiter</artifactId>

            <version>${junit.version}</version>

            <scope>test</scope>

        </dependency>

        <dependency>

            <groupId>org.mockito</groupId>

            <artifactId>mockito-core</artifactId>

            <version>${mockito.version}</version>

            <scope>test</scope>

        </dependency>

    </dependencies>

    <build>

        <plugins>

            <plugin>

                <groupId>
                    org.apache.maven.plugins
                </groupId>

                <artifactId>
                    maven-compiler-plugin
                </artifactId>

                <version>3.13.0</version>

                <configuration>

                    <release>21</release>

                </configuration>

            </plugin>

            <plugin>

                <groupId>
                    org.apache.maven.plugins
                </groupId>

                <artifactId>
                    maven-surefire-plugin
                </artifactId>

                <version>3.2.5</version>

            </plugin>

            <plugin>

                <groupId>
                    org.codehaus.mojo
                </groupId>

                <artifactId>
                    exec-maven-plugin
                </artifactId>

                <version>3.3.0</version>

            </plugin>

        </plugins>

    </build>

</project>